--- a/Resultados.html
+++ b/Resultados.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados del FC Barcelona</title>
+    <title>Resultados del FC Barcelona: EL MAS GRANDE</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color: rgb(230, 224, 173); }
         header, th { background-color: #004c97; color: white; padding: 20px 0; }
