--- a/Resultados.html
+++ b/Resultados.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados del FC Barcelona: EL MAS GRANDE</title>
+    <link href="body.css" rel="stylesheet" type="text/css" />
+
+    <title>Resultados del FC Barcelona</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color: rgb(230, 224, 173); }
-        header, th { background-color: #004c97; color: white; padding: 20px 0; }
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color:whitesmoke; }
+        header, th { background-color: #004c97; color: white; padding: 20px 0; font-style: italic; }
         .container { margin: 20px; }
-        table { width: 80%; margin: 0 auto; border-collapse: collapse; background-color: white; }
+        table { width: 80%; margin: 0 auto; border-collapse: collapse; background-color: white; border: 3px solid #004c97; }
         
         th, td { border: 1px solid black; padding: 10px; text-align: left; }
     </style>
@@ -42,4 +44,3 @@
 
 </body>
 </html>
-
