--- a/Estadio.html
+++ b/Estadio.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="body.css" rel="stylesheet" type="text/css" />
     <title>Estadio del FC Barcelona</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color: rgb(230, 224, 173); }
-        header { background-color: #004c97; color: white; padding: 20px 0; }
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color:whitesmoke }
+        header { background-color: #004c97; color: rgb(147, 86, 86); padding: 20px 0; }
         .container { margin: 20px; }
         .image-container img { max-width: 80%; height: auto; margin-top: 20px; }
     </style>
