--- a/Historia.html
+++ b/Historia.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="body.css" rel="stylesheet" type="text/css" />
     <title>Historia del FC Barcelona</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color: rgb(230, 224, 173); }
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color: whitesmoke; }
         header { background-color: #004c97; color: white; padding: 20px 0; }
-        .container { margin: 20px; padding: 20px; }
+        h1 { font-family: 'Georgia', serif; font-size: 36px; }
+        .container { margin: 20px; padding: 20px; text-align: justify; max-width: 800px; margin-left: auto; margin-right: auto; }
     </style>
 </head>
 <body>
@@ -18,7 +20,20 @@
 
 <div class="container">
     <p>El FC Barcelona fue fundado el 29 de noviembre de 1899 por un grupo de futbolistas suizos, ingleses y catalanes liderados por Joan Gamper. Desde sus inicios, el club ha sido una de las instituciones deportivas más importantes del mundo, destacándose no solo por sus títulos, sino también por su compromiso con los valores y la identidad catalana.</p>
-    <p>A lo largo de su historia, el Barcelona ha conquistado numerosos títulos nacionales e internacionales, consolidándose como uno de los equipos más exitosos y queridos por los aficionados. Su estilo de juego ofensivo, su cantera de jóvenes talentos y su lema "Més que un club" lo han convertido en un referente mundial en el fútbol.</p>
+    
+    <h2>Logros y títulos más importantes</h2>
+    <p>El FC Barcelona ha conquistado múltiples títulos nacionales e internacionales, entre los que destacan:</p>
+    <ul>
+        <li>27 títulos de LaLiga</li>
+        <li>31 Copas del Rey</li>
+        <li>5 UEFA Champions League</li>
+        <li>4 Recopas de Europa</li>
+        <li>3 Mundiales de Clubes</li>
+        <li>Supercopas nacionales e internacionales</li>
+    </ul>
+    
+    <h2>Otros hitos históricos</h2>
+    <p>El Barcelona ha sido el hogar de algunos de los mejores futbolistas de la historia, como Johan Cruyff, Diego Maradona, Ronaldinho, Xavi, Iniesta y Lionel Messi. Además, ha sido pionero en la promoción del fútbol base con su famosa cantera, La Masia.</p>
 </div>
 
 </body>
