--- a/jugadores.html
+++ b/jugadores.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jugadores del FC Barcelona</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color: rgb(230, 224, 173); }
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color:whitesmoke; }
         header { background-color: #004c97; color: white; padding: 20px 0; }
-   
-        table { width: 80%; margin: 0 auto; border-collapse: collapse; background-color: white; }
-        th, td { border: 1px solid black; padding: 10px; text-align: left; }
+        
+        h1 { margin-bottom: 20px; }
+        
+        table { width: 80%; margin: 20px auto; border-collapse: collapse; background-color: white; border: 2px solid #004c97; }
+        th, td { border: 2px solid #004c97; padding: 10px; text-align: left; }
         th { background-color: #004c97; color: white; }
     </style>
 </head>
@@ -92,4 +94,5 @@
 
 </body>
 </html>
+
 
