--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 <div class="nav-buttons">
     <a href="jugadores.html">Jugadores</a>
-    <a href="resultados.html">Resultados</a>
-    <a href="estadio.html">Estadio</a>
-    <a href="historia.html">Historia</a>
+    <a href="Resultados.html">Resultados</a>
+    <a href="Estadio.html">Estadio</a>
+    <a href="Historia.html">Historia</a>
 </div>
 
 <!-- Redes sociales con imágenes -->
